developed create order api with validations and ensuring proper response

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Secrets": {
+    "ApiKeyId": "keyId",
+    "ApiKeySecret": "KeySecret"
+  },
   "Cors": {
     "AllowedOrigin": "http://localhost:4200"
   },
